tests222/tests2/test184.out
lli: <stdin>:1:1: error: expected top-level entity
line 2: variable a is not defined
^
